--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "angular-aria": "^1.5.0",
     "angular-material": "^1.0.6",
     "angular-messages": "^1.5.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-websocket": "git+https://github.com/AngularClass/angular-websocket.git",
+    "bufferutil": "^1.2.1",
+    "d3": "^3.5.16",
+    "fs": "0.0.2",
+    "tls": "0.0.1",
+    "utf-8-validate": "^1.2.1",
+    "ws": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
