--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "typescript": "^1.8.0",
     "typings": "^0.6.8",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "git+https://github.com/webpack/webpack-dev-server.git#efd32a05944499b0c8165da6ff75519fb8fe21a6"
   },
   "scripts": {
     "test": "NODE_ENV=test karma start",
-    "start": "npm install && node_modules/.bin/typings install && npm run-script dev",
+    "start": "npm install && node_modules/.bin/typings install && npm run-script && cd node_modules/webpack-dev-server && npm run-script prepublish && cd ../.. && npm run-script dev",
     "dev": "node node_modules/.bin/webpack-dev-server --content-base app",
     "build": "rm -rf dist/ && NODE_ENV=production node node_modules/.bin/webpack && cp app/index.html dist/index.html",
     "dist": "rm -rf dist/ && NODE_ENV=production node node_modules/.bin/webpack && cp app/index.html dist/index.html && NODE_ENV=production  node node_modules/.bin/webpack-dev-server --content-base dist"
