--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
+    "angular-i18n": "^1.5.3",
     "angular-material": "^1.0.6",
     "angular-messages": "^1.5.0",
     "angular-ui-router": "^0.2.18",
-    "angular-websocket": "git+https://github.com/AngularClass/angular-websocket.git",
     "bufferutil": "^1.2.1",
     "d3": "^3.5.16",
     "fs": "0.0.2",
