Importing rdf libs and putting a dummy monitoring panel

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
+    "rdf": "^3.0.1",
+    "rdf-ext": "^0.3.0",
+    "rdf-parser-n3": "^0.3.0",
     "sass-loader": "^3.1.2",
     "split-by-name-webpack-plugin": "0.0.3",
     "style-loader": "^0.13.0",
