--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bufferutil": "^1.2.1",
     "d3": "^3.5.16",
     "fs": "0.0.2",
+    "leaflet": "^1.0.1",
     "tls": "0.0.1",
     "utf-8-validate": "^1.2.1",
     "ws": "^1.0.1"
