--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
     "angular-i18n": "^1.5.3",
-    "angular-material": "^1.0.6",
+    "angular-material": "1.0.6",
     "angular-messages": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "bufferutil": "^1.2.1",
-    "d3": "^3.5.16",
+    "d3": "3.5.16",
     "fs": "0.0.2",
     "leaflet": "^1.0.1",
+    "leaflet.markercluster": "^1.0.0",
     "tls": "0.0.1",
     "utf-8-validate": "^1.2.1",
     "ws": "^1.0.1"
