--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "scripts": {
     "test": "NODE_ENV=test karma start",
     "start": "npm install && node_modules/.bin/typings install && npm run-script && cd node_modules/webpack-dev-server && npm run-script prepublish && cd ../.. && npm run-script dev",
-    "dev": "node node_modules/.bin/webpack-dev-server --content-base app",
+    "dev": "node node_modules/.bin/webpack-dev-server --content-base app --host 0.0.0.0",
     "build": "rm -rf dist/ && NODE_ENV=production node node_modules/.bin/webpack && cp app/index.html dist/index.html",
     "dist": "rm -rf dist/ && NODE_ENV=production node node_modules/.bin/webpack && cp app/index.html dist/index.html && NODE_ENV=production  node node_modules/.bin/webpack-dev-server --content-base dist"
   },
