--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "waves",
   "version": "1.0.0",
@@ -10,7 +9,7 @@
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
     "angular-i18n": "^1.5.3",
-    "angular-material": "1.0.6",
+    "angular-material": "^1.1.3",
     "angular-messages": "^1.5.0",
     "angular-ui-router": "^0.3.1",
     "bufferutil": "^1.2.1",
