--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app/index.js",
   "repository": "https://gitorious.data-publica.com/waves/waves-front",
   "dependencies": {
-    "angular": "^1.5.0",
-    "angular-animate": "^1.5.0",
-    "angular-aria": "^1.5.0",
-    "angular-i18n": "^1.5.3",
-    "angular-material": "^1.1.3",
-    "angular-messages": "^1.5.0",
-    "angular-ui-router": "^0.3.1",
+    "angular": "~1.5.0",
+    "angular-animate": "~1.5.0",
+    "angular-aria": "~1.5.0",
+    "angular-i18n": "~1.5.3",
+    "angular-material": "~1.1.3",
+    "angular-messages": "~1.5.0",
+    "angular-ui-router": "~0.3.1",
     "bufferutil": "^1.2.1",
     "d3": "3.5.16",
     "fs": "0.0.2",
